fix: spacing errors and support custom font weight in search form

--- a/src/components/gds-navigation/gds-navigation.scss
+++ b/src/components/gds-navigation/gds-navigation.scss
@@ -116,6 +116,7 @@ nav.gds-navigation-nav {
   &-content {
     outline: none;
     padding: var(--spacing-s);
+    display: inline-flex;
   }
 
   &:focus > &-content {
